new h1 tage add check this

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div>
         <h1>Time table App</h1>
         <h1> i will make the timtable </h1>
+        <h1> this is new feature  </h1>
         
         
     </div>
